--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^2.2.8",
+    "ant-design-vue": "^3.0.0-alpha.14",
     "axios": "^0.24.0",
     "vue": "^3.2.16",
     "vue-router": "^4.0.12",
