--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^3.0.0-alpha.14",
     "axios": "^0.24.0",
     "vue": "^3.2.16",
